--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^6.1.0",
-    "jscodeshift": "^0.10.0"
+    "jscodeshift": "^0.10.0",
+    "lodash-es": "^4.17.15"
   },
   "devDependencies": {
     "@types/jscodeshift": "^0.7.1",
+    "@types/lodash-es": "^4.17.3",
+    "@types/node": "^14.6.2",
     "@types/webpack": "^4.41.21",
     "typescript": "^4.0.2"
   },
